--- a/asteroid-hrm.desktop.template
+++ b/asteroid-hrm.desktop.template
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 Categories=Applications;
-Exec=invoker --single-instance --type=qtcomponents-qt5 /usr/bin/asteroid-hrm
+Exec=asteroid-hrm
 Icon=ios-pulse-outline
 X-Asteroid-Center-Color=#0097A6
 X-Asteroid-Outer-Color=#00060C
